updated class path and project

--- a/.classpath
+++ b/.classpath
@@ -1,14 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="src" path="DavisBase/src"/>
-	<classpathentry kind="lib" path="DavisBase/lib/javafx-swt.jar"/>
-	<classpathentry kind="lib" path="DavisBase/lib/javafx.base.jar"/>
-	<classpathentry kind="lib" path="DavisBase/lib/javafx.controls.jar"/>
-	<classpathentry kind="lib" path="DavisBase/lib/javafx.fxml.jar"/>
-	<classpathentry kind="lib" path="DavisBase/lib/javafx.graphics.jar"/>
-	<classpathentry kind="lib" path="DavisBase/lib/javafx.media.jar"/>
-	<classpathentry kind="lib" path="DavisBase/lib/javafx.swing.jar"/>
-	<classpathentry kind="lib" path="DavisBase/lib/javafx.web.jar"/>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
