--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-  <name>DavisBase</name>
+  <name>Davisbase</name>
   <comment/>
   <projects/>
   <buildSpec>
